syntax = "proto3";

package raftinspector;

import "google/protobuf/empty.proto";

option go_package = "github.com/deamondev/raftinspector/proto;proto";

service RaftInspector {
  rpc GetNodeInfo(google.protobuf.Empty) returns (NodeInfo);
  rpc GetClusterInfo(google.protobuf.Empty) returns (ClusterInfo);
}

message NodeInfo {
  string id = 1;
  string address = 2;
  string state = 3;
  uint64 term = 4;
  uint64 commit_index = 5;
  uint64 applied_index = 6;
  uint64 last_snapshot_index = 7;
}

message ClusterInfo {
  repeated string nodes_id = 1;
  string leader_id = 2;
  uint64 term = 3;
}